--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -79,3 +79,18 @@ main
     padding: 11px;
     text-align: center;
 }
+
+#projects{
+    
+    display: grid;
+    margin: 2%;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5% 2%;
+}
+
+.project{
+    background-color: #333333;
+    color: #F5F5F5;
+    padding: 20px;
+    border-radius: 15px;
+}
